--- a/index.html
+++ b/index.html
@@ -3,11 +3,44 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Javascript Boilerplate</title>
+    <title>Photo Snap</title>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
+    <!-- Nav Section -->
+    <nav class="nav">
+      <div class="container">
+        <a href="#" class="nav__app-name">Photo Snap</a>
+      </div>
+    </nav>
+
+    <!-- Photo Section -->
+    <section class="section-photo">
+      <div class="container">
+        <video id="video" class="video">Stream not available...</video>
+        <button id="photo-button" class="btn btn--photo">Take Photo</button>
+        <select id="photo-filter" class="select">
+          <option value="none">Normal</option>
+          <option value="grayscale(100%)">Grayscale</option>
+          <option value="sepia(100%)">Sepia</option>
+          <option value="invert(100%)">Invert</option>
+          <option value="hue-rotate(90deg)">Hue</option>
+          <option value="blur(10px)">Blur</option>
+          <option value="contrast(200%)">Contrast</option>
+        </select>
+        <button id="clear-button" class="btn btn--clear">Clear</button>
+        <canvas id="canvas"></canvas>
+      </div>
+    </section>
+
+    <!-- Gallery Section -->
+    <section class="section-gallery">
+      <div class="container">
+        <div id="photos"></div>
+      </div>
+    </section>
 
     <script type="text/javascript" src="js/app.js"></script>
   </body>
